[gd_scene load_steps=22 format=3 uid="uid://jga6pbb5xpug"]

[ext_resource type="Script" path="res://characters/player/player_entity.gd" id="1_eomfg"]
[ext_resource type="PackedScene" uid="uid://d3yswfl2m7nue" path="res://characters/player/CharacterControllers/OneStickController.tscn" id="2_0hlv6"]
[ext_resource type="PackedScene" uid="uid://d1rmoxdu5yefv" path="res://characters/player/CharacterControllers/TwoStickController.tscn" id="3_nmqp5"]
[ext_resource type="PackedScene" uid="uid://drvgaalhd5v8s" path="res://characters/player/CharacterControllers/TwoStickControllerAuto.tscn" id="4_q8iiu"]
[ext_resource type="PackedScene" uid="uid://bwf5frggyeobl" path="res://characters/player/CharacterControllers/KeyboardMouseController.tscn" id="5_rn5te"]
[ext_resource type="Resource" uid="uid://kd6arste1gur" path="res://ui/game_data_store.tres" id="6_p2ddh"]
[ext_resource type="PackedScene" uid="uid://c5l20701ck6co" path="res://characters/player/health_manager.tscn" id="7_lfx3x"]
[ext_resource type="Script" path="res://characters/position_resetter.gd" id="8_ia8k3"]
[ext_resource type="PackedScene" uid="uid://ds848t2x4cxyt" path="res://characters/player/CharacterSkins/IcySkin_inherited.tscn" id="9_h7s8y"]
[ext_resource type="Script" path="res://characters/player/input_synchronizer.gd" id="10_u5yos"]

[sub_resource type="CapsuleShape3D" id="1"]
radius = 0.492627
height = 1.97047

[sub_resource type="SphereShape3D" id="SphereShape3D_q0x46"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_lc4er"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:player_id")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath("CameraPivot:rotation")
properties/2/spawn = true
properties/2/replication_mode = 1
properties/3/path = NodePath("IcySkin:rotation")
properties/3/spawn = true
properties/3/replication_mode = 1
properties/4/path = NodePath(".:points")
properties/4/spawn = true
properties/4/replication_mode = 1
properties/5/path = NodePath(".:inventory")
properties/5/spawn = true
properties/5/replication_mode = 1

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_5p5in"]
properties/0/path = NodePath("InputSynchronizer:input_camera")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath("InputSynchronizer:input_movement_direction")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath("InputSynchronizer:input_aim")
properties/2/spawn = true
properties/2/replication_mode = 1
properties/3/path = NodePath("InputSynchronizer:input_jump")
properties/3/spawn = true
properties/3/replication_mode = 1

[sub_resource type="Curve" id="Curve_3dm2e"]
_data = [Vector2(0.183099, 0.384615), 0.0, 0.0, 0, 0]
point_count = 1

[sub_resource type="CurveTexture" id="CurveTexture_otox1"]
curve = SubResource("Curve_3dm2e")

[sub_resource type="Gradient" id="Gradient_oadqw"]
colors = PackedColorArray(0, 0.359885, 0.0255266, 1, 0, 0.792157, 0.105882, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_10oju"]
gradient = SubResource("Gradient_oadqw")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_kw32m"]
lifetime_randomness = 0.05
emission_shape = 6
emission_ring_axis = Vector3(0, 0, 1)
emission_ring_height = 1.0
emission_ring_radius = 1.0
emission_ring_inner_radius = 0.0
angle_min = -720.0
angle_max = 550.2
gravity = Vector3(0, 3, 0)
scale_min = 0.1
scale_max = 0.5
color_ramp = SubResource("GradientTexture1D_10oju")
alpha_curve = SubResource("CurveTexture_otox1")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_2dlpe"]
diffuse_mode = 3
specular_mode = 1
vertex_color_use_as_albedo = true

[sub_resource type="SphereMesh" id="SphereMesh_8bm1l"]
material = SubResource("StandardMaterial3D_2dlpe")

[node name="PlayerEntity" type="CharacterBody3D"]
collision_mask = 27
floor_max_angle = 0.872665
script = ExtResource("1_eomfg")
controller_schemes = Array[PackedScene]([ExtResource("2_0hlv6"), ExtResource("3_nmqp5"), ExtResource("4_q8iiu"), ExtResource("5_rn5te")])
game_data = ExtResource("6_p2ddh")

[node name="Collider" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.987748, 0)
shape = SubResource("1")

[node name="HealthManager" parent="." instance=ExtResource("7_lfx3x")]
max_health = 20
start_health = 20

[node name="PositionResetter" type="Node" parent="."]
script = ExtResource("8_ia8k3")

[node name="TwoStickControllerAuto" parent="." node_paths=PackedStringArray("input_synchronizer") instance=ExtResource("4_q8iiu")]
input_synchronizer = NodePath("../InputSynchronizer")

[node name="CameraPivot" type="Node3D" parent="."]
transform = Transform3D(-0.707107, 0.298836, -0.640857, 0, 0.906308, 0.422618, 0.707107, 0.298836, -0.640857, 0, 0, 0)

[node name="ThirdPersonCamera" type="Camera3D" parent="CameraPivot"]
transform = Transform3D(0.99989, 0.0134076, -0.00635271, -0.00627014, 0.769939, 0.638087, 0.0134464, -0.637976, 0.769938, -0.69771, 14.8504, 15.5082)
fov = 85.0

[node name="IcySkin" parent="." instance=ExtResource("9_h7s8y")]

[node name="PlayerHand" type="Area3D" parent="IcySkin"]
collision_mask = 8

[node name="CollisionShape3D" type="CollisionShape3D" parent="IcySkin/PlayerHand"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.00531, 0.798733)
shape = SubResource("SphereShape3D_q0x46")

[node name="PlayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_lc4er")

[node name="InputSynchronizer" type="MultiplayerSynchronizer" parent="."]
unique_name_in_owner = true
replication_config = SubResource("SceneReplicationConfig_5p5in")
script = ExtResource("10_u5yos")

[node name="UpgradeParticles" type="GPUParticles3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.86076, 0)
emitting = false
lifetime = 0.5
speed_scale = 3.0
randomness = 0.5
process_material = SubResource("ParticleProcessMaterial_kw32m")
draw_pass_1 = SubResource("SphereMesh_8bm1l")

[connection signal="damage" from="HealthManager" to="." method="on_hit"]
[connection signal="health_depleted" from="HealthManager" to="." method="on_death"]
